[package]
name = "project02"
version = "0.1.0"
authors = ["Joseph Onyach <josephokothonyach@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# default = ["std", "embassy", "esp-idf-svc/native"]

# pio = ["esp-idf-svc/pio"]
# The above two lines are commented out because they are not used in this project
# They are replaced by the following two lines

default = ["native"]
native = ["esp-idf-svc/native"]

# std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
# alloc = ["esp-idf-svc/alloc"]
# nightly = ["esp-idf-svc/nightly"]
# experimental = ["esp-idf-svc/experimental"]
# embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }

[build-dependencies]
embuild = "0.31.3"
